Product/kube-configs/new-product-service-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: product-ingress
  namespace: product
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-staging
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - my-aks-ingress.eastus2.cloudapp.azure.com
    secretName: tls-secret
  rules:
  - host: my-aks-ingress.eastus2.cloudapp.azure.com
    http:
      paths:
      - path: /product
        backend:
          serviceName: new-product-service-kvflex
          servicePort: 80
